<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fillViewport="true"
    tools:context=".CheckBBActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/check_bb_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="#fff"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <EditText
            android:id="@+id/textberatbadan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_input"
            android:padding="@dimen/padding_input"
            android:hint="@string/txt_berat_badan"
            android:textColorHint="#6b6b6b"
            android:textColor="#6b6b6b"
            android:inputType="numberDecimal"
            android:background="@drawable/bginput"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/check_bb_toolbar"/>

        <EditText
            android:id="@+id/texttinggibadan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_input"
            android:padding="@dimen/padding_input"
            android:hint="@string/txt_tinggi_badan"
            android:textColorHint="#6b6b6b"
            android:textColor="#6b6b6b"
            android:inputType="numberDecimal"
            android:background="@drawable/bginput"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/textberatbadan"/>

        <LinearLayout
            android:id="@+id/btngroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:layout_below="@id/texttinggibadan">

            <Button
                android:id="@+id/btnhitungbb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_btn_hitung"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:background="@drawable/bgbtngradient"/>

            <Button
                android:id="@+id/btnresetbb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_btn_reset"
                android:textColor="#000"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bgbtnwhite"/>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cardresult"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="8dp"
            android:layout_below="@id/btngroup">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textjudul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keterangan_card1"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textColor="#b4000000"/>

                <TextView
                    android:id="@+id/textresult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="46sp"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/textketerangan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textColor="#9b3eff"
                    android:textStyle="bold"/>

                <!--<Button-->
                    <!--android:id="@+id/btnrekomendasi"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="30dp"-->
                    <!--android:background="@drawable/bgbtn"-->
                    <!--android:text="@string/txt_btn_rekomendasi"-->
                    <!--android:textColor="#fff"-->
                    <!--android:textSize="11sp"-->
                    <!--android:paddingLeft="10dp"-->
                    <!--android:paddingRight="10dp"-->
                    <!--android:layout_marginTop="5dp"/>-->

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>